--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,18 @@
 {
-    "routes": [
+    "version": 2,
+    "builds": [
       {
-        "src": "/[^.]+",
-        "dest": "/"
+        "src": "index.html",
+        "use": "@vercel/static-build"
+      },
+      {
+        "src": "/(.*).(js|css)",
+        "use": ["@vercel/static-build"]
       }
+    ],
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/.*", "dest": "/index.html" }
     ]
   }
+  
